--- a/src/feature/dirauth/include.am
+++ b/src/feature/dirauth/include.am
@@ -11,6 +11,7 @@ MODULE_DIRAUTH_SOURCES =					\
 	src/feature/dirauth/dirauth_sys.c			\
 	src/feature/dirauth/dircollate.c			\
 	src/feature/dirauth/dirvote.c				\
+	src/feature/dirauth/dirvote_con.c				\
 	src/feature/dirauth/dsigs_parse.c			\
 	src/feature/dirauth/guardfraction.c			\
 	src/feature/dirauth/keypin.c				\
@@ -34,6 +35,7 @@ noinst_HEADERS +=					\
 	src/feature/dirauth/dirauth_sys.h		\
 	src/feature/dirauth/dircollate.h		\
 	src/feature/dirauth/dirvote.h			\
+	src/feature/dirauth/dirvote_con.h			\
 	src/feature/dirauth/dsigs_parse.h		\
 	src/feature/dirauth/guardfraction.h		\
 	src/feature/dirauth/keypin.h			\
