--- a/src/feature/dircache/include.am
+++ b/src/feature/dircache/include.am
@@ -4,6 +4,7 @@ MODULE_DIRCACHE_SOURCES = 			\
 	src/feature/dircache/conscache.c	\
 	src/feature/dircache/consdiffmgr.c	\
 	src/feature/dircache/dircache.c		\
+	src/feature/dircache/dircache_con.c		\
 	src/feature/dircache/dirserv.c
 
 # ADD_C_FILE: INSERT HEADERS HERE.
@@ -12,6 +13,7 @@ noinst_HEADERS +=					\
 	src/feature/dircache/conscache.h		\
 	src/feature/dircache/consdiffmgr.h		\
 	src/feature/dircache/dircache.h			\
+	src/feature/dircache/dircache_con.h			\
 	src/feature/dircache/dirserv.h
 
 if BUILD_MODULE_DIRCACHE
